--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "argon-design-system-free": "^1.2.0",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-scratchcard": "^1.2.0-a",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
