--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-scratchcard": "^1.2.0-a",
     "vue-typed-js": "^0.1.2",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
