--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-typed-js": "^0.1.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
+    "vuex-map-fields": "^1.4.1",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
