--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^8.22.3",
     "vue-router": "^3.2.0",
     "vue-scratchcard": "^1.2.0-a",
+    "vue-share-buttons": "^1.1.0",
     "vue-typed-js": "^0.1.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
