--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/cli": "^2.4.7",
+    "@capacitor/core": "^2.4.7",
     "@mdi/font": "^5.9.55",
     "argon-design-system-free": "^1.2.0",
     "core-js": "^3.6.5",
